--- a/Proyecto_Pagos_Eventos/Proyecto_Pagos_Eventos.csproj
+++ b/Proyecto_Pagos_Eventos/Proyecto_Pagos_Eventos.csproj
@@ -58,22 +58,28 @@
   <ItemGroup>
     <Compile Include="Clases\Conexion.cs" />
     <Compile Include="Clases\CrudClientes.cs" />
+    <Compile Include="Clases\CrudEquipos.cs" />
     <Compile Include="Cliente.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Cliente.Designer.cs">
       <DependentUpon>Cliente.cs</DependentUpon>
     </Compile>
-    <Compile Include="Equipo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Equipo.Designer.cs">
-      <DependentUpon>Equipo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="EventosBDDataSet.Designer.cs">
+    <Compile Include="ClientesDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>EventosBDDataSet.xsd</DependentUpon>
+      <DependentUpon>ClientesDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Equipos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Equipos.Designer.cs">
+      <DependentUpon>Equipos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EquiposDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EquiposDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Form2.cs">
       <SubType>Form</SubType>
@@ -134,8 +140,8 @@
     <EmbeddedResource Include="Cliente.resx">
       <DependentUpon>Cliente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Equipo.resx">
-      <DependentUpon>Equipo.cs</DependentUpon>
+    <EmbeddedResource Include="Equipos.resx">
+      <DependentUpon>Equipos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
@@ -163,16 +169,27 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="EventosBDDataSet.xsc">
-      <DependentUpon>EventosBDDataSet.xsd</DependentUpon>
+    <None Include="ClientesDataSet.xsc">
+      <DependentUpon>ClientesDataSet.xsd</DependentUpon>
     </None>
-    <None Include="EventosBDDataSet.xsd">
+    <None Include="ClientesDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>EventosBDDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>ClientesDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="EventosBDDataSet.xss">
-      <DependentUpon>EventosBDDataSet.xsd</DependentUpon>
+    <None Include="ClientesDataSet.xss">
+      <DependentUpon>ClientesDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="EquiposDataSet.xsc">
+      <DependentUpon>EquiposDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="EquiposDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>EquiposDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="EquiposDataSet.xss">
+      <DependentUpon>EquiposDataSet.xsd</DependentUpon>
     </None>
     <None Include="Models\Model.edmx.diagram">
       <DependentUpon>Model.edmx</DependentUpon>
