los equipos se agregan en otra tabla

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 
 Proyecto_Pagos_Eventos/App.config
+
+.vs/
+
+Proyecto_Pagos_Eventos/bin/
+
+Proyecto_Pagos_Eventos/Models/
+
+Proyecto_Pagos_Eventos/obj/
+
+Proyecto_Pagos_Eventos/Properties/
