--- a/Proyecto_Pagos_Eventos/Proyecto_Pagos_Eventos.csproj
+++ b/Proyecto_Pagos_Eventos/Proyecto_Pagos_Eventos.csproj
@@ -8,10 +8,11 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Proyecto_Pagos_Eventos</RootNamespace>
     <AssemblyName>Proyecto_Pagos_Eventos</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -81,6 +82,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>EquiposDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="EquipoServiciosDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EquipoServiciosDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Form2.cs">
       <SubType>Form</SubType>
@@ -171,6 +177,10 @@
     <EmbeddedResource Include="Servicios.resx">
       <DependentUpon>Servicios.cs</DependentUpon>
     </EmbeddedResource>
+    <EntityDeploy Include="Models\Model.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model.Designer.cs</LastGenOutput>
+    </EntityDeploy>
     <None Include="ClientesDataSet.xsc">
       <DependentUpon>ClientesDataSet.xsd</DependentUpon>
     </None>
@@ -182,10 +192,6 @@
     <None Include="ClientesDataSet.xss">
       <DependentUpon>ClientesDataSet.xsd</DependentUpon>
     </None>
-    <EntityDeploy Include="Models\Model.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model.Designer.cs</LastGenOutput>
-    </EntityDeploy>
     <None Include="EquiposDataSet.xsc">
       <DependentUpon>EquiposDataSet.xsd</DependentUpon>
     </None>
@@ -196,6 +202,17 @@
     </None>
     <None Include="EquiposDataSet.xss">
       <DependentUpon>EquiposDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="EquipoServiciosDataSet.xsc">
+      <DependentUpon>EquipoServiciosDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="EquipoServiciosDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>EquipoServiciosDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="EquipoServiciosDataSet.xss">
+      <DependentUpon>EquipoServiciosDataSet.xsd</DependentUpon>
     </None>
     <None Include="Models\Model.edmx.diagram">
       <DependentUpon>Model.edmx</DependentUpon>
