--- a/Proyecto_Pagos_Eventos/packages.config
+++ b/Proyecto_Pagos_Eventos/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net472" />
+  <package id="iTextSharp.LGPLv2.Core" version="1.6.7" targetFramework="net461" />
+  <package id="Portable.BouncyCastle" version="1.8.6.7" targetFramework="net461" />
 </packages>
