Correccion de PDF

--- a/Proyecto_Pagos_Eventos/Proyecto_Pagos_Eventos.csproj
+++ b/Proyecto_Pagos_Eventos/Proyecto_Pagos_Eventos.csproj
@@ -303,6 +303,7 @@
       <LastGenOutput>Model.cs</LastGenOutput>
     </Content>
     <Content Include="Resources\Comprobante.html" />
+    <Content Include="Resources\iconfinder_PartyConfetti.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
